<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.syuan.myapplication.activity.UserActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.syuan.myapplication.view.TitleBarView
                android:id="@+id/user_title"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/center_top_bg" />

                <com.syuan.myapplication.view.CircleImageView
                    android:id="@+id/user_iv_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:src="@mipmap/biz_pc_main_info_profile_avatar_bg_dark" />

                <TextView
                    android:id="@+id/user_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/user_iv_pic"
                    android:layout_toRightOf="@id/user_iv_pic"
                    android:paddingTop="10dp"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/user_tv_integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/user_iv_pic"
                    android:layout_below="@id/user_tv_name"
                    android:layout_toRightOf="@id/user_iv_pic"
                    android:gravity="bottom"
                    android:paddingBottom="10dp"
                    android:text="@string/user_integral"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/user_tv_ties_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="跟贴数统计：" />

            <TextView
                android:id="@+id/user_tv_login_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="登录日志" />

            <ListView
                android:id="@+id/user_lv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/user_bt_out"
                style="@style/RegisterET"
                android:background="@color/red"
                android:text="@string/user_outLogin"
                android:textColor="@color/white" />
        </LinearLayout>
        <TextView
            android:id="@+id/user_tv_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>
